# videobooth

./: .gitignore  Cargo.toml  index.html  todo  viewer.html
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
